k8s/helm/kong/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kong
  namespace: api-gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kong
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - ports:
      - protocol: TCP
        port: 8000 # HTTP
      - protocol: TCP
        port: 8443 # HTTPS
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: api-gateway
      podSelector:
        matchLabels:
          app.kubernetes.io/name: oauth2-proxy
    ports:
    - protocol: TCP
      port: 4180
  # Allow reaching kube-apiserver (node IP in Kind)
  - to:
        - ipBlock:
            cidr: 172.21.0.0/16
    ports:
      - port: 6443
        protocol: TCP
  # Allow DNS to CoreDNS in kube-system
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
